--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       HOST: 0.0.0.0
       NODE_ENV: development
     ports:
-      - "3000:3000"
-    command: npm run dev
+      - "8000:8000"
+    command: yarn run dev
     volumes:
       - .:/app/
       - /app/node_modules
