--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 # docker-compose.yml
-version: "3"
+version: "3.5"
 services:
   app:
     build: .
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://user:pass@postgres:5432/db
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/db
       HOST: 0.0.0.0
       NODE_ENV: development
     ports:
@@ -17,10 +17,10 @@ services:
       - /app/node_modules
 
   postgres:
-    image: postgres:10.4
+    image: postgres
     ports:
       - "35432:5432"
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: db
