--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nuxt-express-postgres-starter",
   "version": "1.0.0",
-  "description": "A full-stack starter project with Nuxt, Express and Postgres",
-  "author": "Hugo Di Francesco",
+  "description": "Nuxt, Express and Postgres",
+  "author": "callyca",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -17,42 +17,44 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/toast": "^3.3.1",
     "bcrypt": "^5.0.1",
     "client-sessions": "^0.8.0",
-    "cross-env": "^5.2.1",
-    "helmet": "^3.23.3",
+    "cross-env": "^7.0.3",
+    "helmet": "^4.6.0",
     "migrate": "^1.7.0",
     "morgan": "^1.10.0",
     "nuxt": "^2.15.6",
     "nuxt-express-module": "0.0.11",
-    "pg": "^7.18.2",
+    "pg": "^8.6.0",
     "sql-template-strings": "^2.2.2",
-    "uuid": "^3.4.0",
+    "uuid": "^8.3.2",
+    "vue-toasted": "^1.1.28",
     "webpack-dev-middleware": "^4.2.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^0.0.1",
+    "@nuxtjs/eslint-config": "^6.0.0",
     "@vue/test-utils": "^1.2.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^24.9.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^3.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-loader": "^2.2.1",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "2.6.2",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "jest": "^24.9.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^1.19.4",
-    "nuxt-buefy": "^0.3.31",
-    "prettier": "1.14.3",
-    "sass-loader": "^7.3.1",
+    "eslint-plugin-vue": "^7.9.0",
+    "jest": "^26.6.3",
+    "node-sass": "4.14.1",
+    "nodemon": "^2.0.7",
+    "nuxt-buefy": "^0.4.7",
+    "prettier": "2.3.0",
+    "sass-loader": "7.3.1",
     "vue-jest": "^3.0.7"
   }
 }
